MIR-854 layout bugs caused by bootstrap 4 migration (#499)
* MIR-854 extens bs4 behaviour of close button: also inherit color for hover
* MIR-854 workaround for bs3 modal, fixed with css now
* MIR-854 adds space to editor submit buttons
* MIR-854 removes button spacing for login form, is done by html now
* MIR-854 fixes left sided menu: prevents colliding with modal
* MIR-854 replaces outdated class in by show
* MIR-854 replaces outdated hidden classes to fix date select

--- a/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/base.scss
+++ b/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/base.scss
@@ -229,6 +229,10 @@
     }
   }
 
+  .alert-dismissible .close:hover {
+    color: inherit;
+  }
+
 // Large devices (desktops) and below
 @include media-breakpoint-down(lg) {
     // add/overwrite styles for responsive level lg and lower
