--- a/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/user-login.scss
+++ b/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/user-login.scss
@@ -2,6 +2,3 @@
 .form-login .form-control {
   width: 30%;
 }
-.form-login .form-actions .btn:first-child {
-  margin-right: 0.5rem;
-}
